samples/_failures_safe/1761261401_247782_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_659dd9c4.c: In function ‘main’:
./samples/SAFE/__tmp_659dd9c4.c:172:25: error: expected ‘)’ at end of input
  172 |         free_matrix(mat2
      |                    ~    ^
      |                         )
./samples/SAFE/__tmp_659dd9c4.c:172:9: error: expected declaration or statement at end of input
  172 |         free_matrix(mat2
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_659dd9c4.c:172:9: error: expected declaration or statement at end of input
